# WeBookClient

./: .appveyor.yml  .travis.yml  BookmarkView_8h.html  Bookmarks_8h.html  BrowserWindow_8h_source.html  Browser_8cpp.html  Browser_8cpp_source.html  Browser_8h_source.html  CMakeLists.txt  DownloadManagerWidget_8cpp.html  DownloadManagerWidget_8h.html  DownloadManagerWidget_8h_source.html  DownloadWidget_8cpp.html  DownloadWidget_8h.html  DownloadWidget_8h_source.html  Doxyfile  HelpView_8cpp.html  HelpView_8h.html  Makefile  README.md  TabWidget_8cpp.html  TabWidget_8h.html  TabWidget_8h_source.html  TreeWidgetView_8h.html  WeBookClient.doxygen  WeBookClient.pro  WeBookClient.qdocconf  WeBookClient.qrc  WebPage_8cpp.html  WebPage_8cpp.js  WebPage_8cpp_source.html  WebPopupWindow_8cpp_source.html  WebView_8cpp_source.html  XbelMenuReader_8cpp.html  XbelMenuReader_8cpp_source.html  XbelMenuReader_8h.html  XbelMenuReader_8h_source.html  XbelTreeWriter_8cpp_source.html  browser_8cpp.html  browser_8h.html  (+48 more)
android/: AndroidManifest.xml
config/: config.xml
data/: urllist.txt
data/WeBook/: ItemId1.1.rtf  TitlePageID.rtf
desktop/: WeBookClient.desktop
doc/html/: BookmarkMenu_8cpp.html  BookmarkMenu_8cpp_source.html  BookmarkMenu_8h.html  BookmarkMenu_8h_source.html  BookmarkView_8cpp.html  BookmarkView_8cpp_source.html  BookmarkView_8h.html  BookmarkView_8h_source.html  Bookmarks_8cpp.html  Bookmarks_8cpp_source.html  Bookmarks_8h_source.html  BrowserWindow_8cpp.html  BrowserWindow_8cpp_source.html  BrowserWindow_8h.html  Browser_8h.html  DownloadManagerWidget_8cpp_source.html  DownloadWidget_8cpp_source.html  HelpView_8cpp_source.html  HelpView_8h_source.html  TabWidget_8cpp_source.html  TreeWidgetView_8cpp.html  TreeWidgetView_8cpp_source.html  TreeWidgetView_8h.html  TreeWidgetView_8h_source.html  WebPage_8h.html  WebPage_8h_source.html  WebPopupWindow_8cpp.html  WebPopupWindow_8h.html  WebPopupWindow_8h_source.html  WebView_8cpp.html  WebView_8h.html  WebView_8h_source.html  XbelMenuReader_8cpp_source.html  XbelMenuReader_8h_source.html  XbelTreeReader_8cpp.html  XbelTreeReader_8cpp_source.html  XbelTreeReader_8h.html  XbelTreeReader_8h_source.html  XbelTreeWriter_8cpp.html  XbelTreeWriter_8h.html  (+77 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_5.js  all_7.js  all_9.js  all_c.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  functions_10.js  functions_2.js  (+14 more)
docs/: Notes  qmake-plateforms.txt
docs/html/: AboutDialog_8h_source.html  MainWindow_8h_source.html  QAESEncryption_8h_source.html  QLoggerCommon_8h_source.html  QLoggerConstants_8h_source.html  QLoggerCrypto_8h_source.html  QLoggerLevel_8h_source.html  QLoggerManager_8h_source.html  QLoggerWriter_8h_source.html  TreeItem_8h_source.html  TreeModel_8h_source.html  TreeViewDragDropModel_8h_source.html  WeBookMan_8h_source.html  annotated.html  classAboutDialog-members.html  classAboutDialog.html  classMainWindow-members.html  classMainWindow.html  classQAESEncryption-members.html  classQAESEncryption.html  classQLoggerLevel-members.html  classQLoggerLevel.html  classQLogger_1_1QLoggerCommon-members.html  classQLogger_1_1QLoggerCommon.html  classQLogger_1_1QLoggerCrypto-members.html  classQLogger_1_1QLoggerCrypto.html  classQLogger_1_1QLoggerManager.html  classQLogger_1_1QLoggerWriter.html  classTreeItem-members.html  classTreeItem.html  classTreeModel-members.html  classTreeModel.html  classTreeViewDragDropModel-members.html  classTreeViewDragDropModel.html  classWeBookMan-members.html  classWeBookMan.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  (+5 more)
docs/latex/: annotated.tex  classAboutDialog.tex  classMainWindow.tex  classQAESEncryption.tex  classTreeItem.tex  classTreeModel.tex  classTreeViewDragDropModel.tex  classWeBookMan.tex  namespaceQLogger.tex  refman.tex
download/: download.txt
help/: Help_en.md
ios/: Info.plist
macos/: Info.plist
resources/: CMakeLists.txt  WeBook.desktop  WeBookClient.desktop
scripts/: build_script.sh  install.sh  test.sh
search/: all_11.js  all_13.js  all_14.js  all_15.js  all_4.js  all_5.js  all_d.js  all_e.js  classes_2.js  files_0.js  files_2.js  files_4.js  files_5.js  files_6.js  functions_1.js  functions_11.js  functions_13.js  functions_14.js  functions_15.js  functions_3.js  functions_7.js  functions_b.js  searchdata.js
src/: AboutDialog.cpp  AboutDialog.h  BookmarkMenu.cpp  BookmarkMenu.h  BookmarkView.cpp  BookmarkView.h  Bookmarks.cpp  Bookmarks.h  Bookmarks.ui  Browser.cpp  Browser.h  BrowserWindow.cpp  BrowserWindow.h  DownloadManagerWidget.cpp  DownloadManagerWidget.h  DownloadWidget.cpp  DownloadWidget.h  HelpTab.cpp  HelpTab.h  HelpView.cpp  HelpView.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  QLogger.h  TabWidget.cpp  TabWidget.h  TreeItem.cpp  TreeItem.h  TreeModel.cpp  TreeModel.h  TreeViewDragDropModel.cpp  TreeViewDragDropModel.h  TreeWidgetView.cpp  TreeWidgetView.h  WeBookCommon.cpp  WeBookCommon.h  WeBookCrypto.cpp  WeBookCrypto.h  WeBookFtpClient.cpp  (+55 more)
src/CuteLogger/: AbstractAppender.cpp  AbstractAppender.h  AbstractStringAppender.cpp  AbstractStringAppender.h  AndroidAppender.h  ConsoleAppender.cpp  ConsoleAppender.h  FileAppender.cpp  FileAppender.h  Logger.cpp  Logger.h  OutputDebugAppender.h  RollingFileAppender.cpp  RollingFileAppender.h
src/QLogger/: QLogger.cpp  QLogger.h  QLoggerCommon.cpp  QLoggerCommon.h  QLoggerConstants.h  QLoggerCrypto.cpp  QLoggerCrypto.h  QLoggerLevel.h  QLoggerManager.cpp  QLoggerManager.h  QLoggerWrapper.cpp  QLoggerWrapper.h  QLoggerWriter.cpp  QLoggerWriter.h
src/QtAES/: QAESEncryption.h
test/: main.cpp
tools/: build-with-qmake.sh
translations/: WeBookClient_ar.ts  WeBookClient_de.ts  WeBookClient_en.ts  WeBookClient_es.ts  WeBookClient_fr.ts  WeBookClient_it.ts  WeBookClient_ja.ts  WeBookClient_no.ts  WeBookClient_ru.ts  WeBookClient_sv.ts  WeBookClient_zh_CN.ts
ui/: ui_aboutdialog.h  ui_mainwindow.h
(+53 files in other folders)
